--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@prismicio/client": "^7.3.1",
     "@prismicio/next": "^1.5.0",
     "@prismicio/react": "^2.7.3",
+    "@react-three/drei": "^9.96.4",
+    "@react-three/fiber": "^8.15.15",
+    "@types/three": "^0.160.0",
     "clsx": "^2.1.0",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "three": "^0.160.1"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
